fix vertical align

--- a/_ia_mixin.scss
+++ b/_ia_mixin.scss
@@ -98,6 +98,8 @@
   div.form-item {
     display: inline-block;
     margin-right: $margin-right;
+    // Allow the field to be always aligned vertically
+    vertical-align: top;
 
   }
   div.description {
